# Soroban-Registry

./: FEATURES_SUMMARY.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: audit_handlers.rs  benchmark_handlers.rs  detector.rs  handlers.rs  main.rs  models.rs  routes.rs  scoring.rs
backend/shared/src/: abi.rs  lib.rs  models.rs
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  main.rs
frontend/app/: page.tsx
frontend/app/contracts/: contracts-content.tsx
frontend/app/contracts/[id]/: page.tsx
frontend/app/graph/: graph-content.tsx
frontend/components/: ContractCard.tsx  DependencyGraph.tsx  GraphControls.tsx
frontend/lib/: api.ts
scripts/: ci-check.sh
