[package]
name = "soroban-registry-cli"
version = "0.1.0"
edition = "2021"
authors = ["Soroban Registry Contributors"]
license = "MIT"

[[bin]]
name = "soroban-registry"
path = "src/main.rs"

[dependencies]
shared = { path = "../backend/shared" }

clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
sha2 = "0.10"
hex = "0.4"
